WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236132
LibWebRTCCodecs SharedVideoFrameWriters can deadlock in case of GPUProcess crash
https://bugs.webkit.org/show_bug.cgi?id=236132
Summary
LibWebRTCCodecs SharedVideoFrameWriters can deadlock in case of GPUProcess crash
youenn fablet
Reported
2022-02-04 02:14:36 PST
LibWebRTCCodecs SharedVideoFrameWriters can deadlock in case of GPUProcess crash
Attachments
Patch
(21.13 KB, patch)
2022-02-04 03:52 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(21.07 KB, patch)
2022-02-08 03:14 PST
,
youenn fablet
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(21.30 KB, patch)
2022-02-08 03:49 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(22.06 KB, patch)
2022-02-08 04:40 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-02-04 03:52:04 PST
Created
attachment 450883
[details]
Patch
Eric Carlson
Comment 2
2022-02-04 09:16:32 PST
Comment on
attachment 450883
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=450883&action=review
> Source/WebKit/ChangeLog:10 > + To prevent this, whenever we detect a GPUProcess connection, we disable SharedVideoFrameWriters, which has the effect of
Do you mean whenever we detect a GPUProcess *crash*?
> Source/WebKit/WebProcess/GPU/webrtc/SharedVideoFrame.cpp:45 > + fprintf(stderr, "SharedVideoFrameWriter::wait\n");
Oops!
> LayoutTests/webrtc/vp8-then-h264-gpu-process-crash.html:91 > +}, "Frames should be coming event after gpu process crash");
a/event/even/
youenn fablet
Comment 3
2022-02-08 03:14:36 PST
Created
attachment 451231
[details]
Patch for landing
youenn fablet
Comment 4
2022-02-08 03:49:05 PST
Created
attachment 451232
[details]
Patch for landing
EWS
Comment 5
2022-02-08 04:27:56 PST
Patch 451231 does not build
youenn fablet
Comment 6
2022-02-08 04:40:01 PST
Created
attachment 451236
[details]
Patch for landing
EWS
Comment 7
2022-02-08 09:16:07 PST
Committed
r289381
(
246969@main
): <
https://commits.webkit.org/246969@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451236
[details]
.
Radar WebKit Bug Importer
Comment 8
2022-02-08 09:17:17 PST
<
rdar://problem/88633294
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug