Source/WebKit/WebProcess/GPU/webrtc/SharedVideoFrame.cpp
@@ -35,14 +35,19 @@
 namespace WebKit {
 using namespace WebCore;
 
+SharedVideoFrameWriter::SharedVideoFrameWriter()
+    : m_semaphore(makeUniqueRef<IPC::Semaphore>())
+{
+}
+
 bool SharedVideoFrameWriter::wait(const Function<void(IPC::Semaphore&)>& newSemaphoreCallback)
 {
-    if (!m_semaphore) {
-        m_semaphore = makeUnique<IPC::Semaphore>();
-        newSemaphoreCallback(*m_semaphore);
+    if (!m_isSemaphoreInUse) {
+        m_isSemaphoreInUse = true;
+        newSemaphoreCallback(m_semaphore.get());
         return true;
     }
-    return m_semaphore->wait();
+    return !m_isDisabled && m_semaphore->wait();
 }
 
 bool SharedVideoFrameWriter::allocateStorage(size_t size, const Function<void(const SharedMemory::IPCHandle&)>& newMemoryCallback)
@@ -94,6 +99,12 @@ bool SharedVideoFrameWriter::write(const webrtc::VideoFrame& frame, const Functi
     return info.writeVideoFrame(frame, static_cast<uint8_t*>(m_storage->data()));
 }
 #endif
+
+void SharedVideoFrameWriter::disable()
+{
+    m_isDisabled = true;
+    m_semaphore->signal();
+}
 
 RetainPtr<CVPixelBufferRef> SharedVideoFrameReader::read()
 {
